설계 검토 피드백을 JDK25 실행 계약에 반영한다
운영 gate와 public provider 계약을 명시해 0 tests green 및 provider 혼입 회귀를 차단하고, 문서/검증 범위를 root와 module까지 확장한다.

Constraint: root toolchain은 JDK25이며 provider는 중앙 Version Catalog와 published 1.12.1 artifact를 사용해야 한다.

Rejected: 구현을 먼저 진행하고 review finding을 후처리 | 운영 P1과 문서 계약 누락을 구현 전에 차단해야 한다.

Confidence: high

Scope-risk: narrow

Directive: 계획과 구현은 execution gate, 전체 testRuntimeClasspath exclusion, public API assertion을 유지한다.

Tested: git diff --check, JDK25 provider classfile/module metadata 및 six-perspective design review

Not-tested: 아직 Kotlin/Gradle 코드 구현과 target tests를 실행하지 않았다.